v2 with a few bugs

--- a/index.html
+++ b/index.html
@@ -31,20 +31,60 @@
 
   <main>
     <div class="wrapper">
+      <img src="images/coffe-mug.jpeg" width="600px" alt="Picture of a Coffee Mug">
 
+      <h2>The Delicious Cup</h2>
+      <section>
+        <p>Is there anything more statisfying than the first cup in the morning? It's super satisfying. And weather you like your coffee with cream, or straight black, that first sip keeps you strong and healthy.</p>
 
-
+        <p>My favorite coffee is Dunkin Donuts. Although they don't have it in Seattle, the East Coast knows what's up when they get into some Dunkin. </p>
+        <div>
+          <hr class="secDiv">
+        </div>
+        <section>
+          <div>
+            <h3>Why I drink Coffee</h3>
+            <ul id="image">
+              <li>It tastes <strong>great</strong> (only when it's warm) </li>
+              <li>It reminds me of <u>studying</u> in Peru</li>
+              <li>I want to be a <strong>cool adult</strong> who drinks cool coffee</li>
+            </ul>
+            <hr class="secDiv">
+          </div>
+        </section>
+        <div>
+          <h3>Three Great Coffee Shops</h3>
+          <div>
+            <p>
+              <a href="http://www.zokacoffee.com/">Zoka Coffee</a>
+            </p>
+            <p>
+              <a href="https://caffeumbria.com/">Caffe Umbria</a>
+            </p>
+            <p>
+              <a href="https://starbucks.com">Starbucks</a>
+            </p>
+            <hr class="secDiv">
+            <div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
   </main>
 
   <footer>
     <div class="wrapper">
-
-
-
+      <section>
+        <div>
+          <a href="linkedin.com/in/nate-waters">Design by Nate Waters</a>
+        </div>
+        <div>
+          <a href="https://www.yelp.com/biz/caffe-umbria-chicago-4">Coffee suggestions provided by Yelp</a>
+        </div>
+      </section>
     </div>
-
   </footer>
 
 </body>
