Finishing colors and widths, didn't get list-style-image to work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <!--[if lt IE 9]>
    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
  <![endif]-->
-
+<style>
+  ul {
+    list-style-image: url(logo-coffee.png);
+  }
+</style>
 </head>
 
 <body>
@@ -31,7 +35,7 @@
 
   <main>
     <div class="wrapper">
-      <img src="images/coffe-mug.jpeg" width="600px" alt="Picture of a Coffee Mug">
+      <img src="images/coffe-mug.jpeg" alt="Picture of a Coffee Mug">
 
       <h2>The Delicious Cup</h2>
       <section>
@@ -44,7 +48,7 @@
         <section>
           <div>
             <h3>Why I drink Coffee</h3>
-            <ul id="image">
+            <ul>
               <li>It tastes <strong>great</strong> (only when it's warm) </li>
               <li>It reminds me of <u>studying</u> in Peru</li>
               <li>I want to be a <strong>cool adult</strong> who drinks cool coffee</li>
